feat: add schema prisma to artists
