# doc/api.yaml
@@ -235,30 +235,6 @@ paths:
           description: Album not found
       summary: Get albums list
       tags: *ref_2
-    put:
-      description: Update library album information by UUID
-      operationId: AlbumsController_update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateAlbumDto'
-      responses:
-        '200':
-          description: The album has been updated.
-        '400':
-          description: Bad request. albumId is invalid (not uuid)
-        '404':
-          description: Album was not found.
-      summary: Update album information
-      tags: *ref_2
     delete:
       description: Delete album from library
       operationId: AlbumsController_remove
@@ -324,30 +300,6 @@ paths:
           description: Track not found
       summary: Get single track by id
       tags: *ref_3
-    put:
-      description: Update library track information by UUID
-      operationId: TracksController_update
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UpdateTrackDto'
-      responses:
-        '200':
-          description: The track has been updated.
-        '400':
-          description: Bad request. trackId is invalid (not uuid)
-        '404':
-          description: Track was not found.
-      summary: Update track information
-      tags: *ref_3
     delete:
       description: Delete track
       operationId: TracksController_remove
@@ -366,128 +318,6 @@ paths:
           description: Track was not found.
       summary: Delete track
       tags: *ref_3
-  /favs:
-    get:
-      description: Get all favorites artists, albums and tracks
-      operationId: FavoritesController_findAll
-      parameters: []
-      responses:
-        '200':
-          description: Successful operation
-      summary: Get all favorites
-      tags: &ref_4
-        - Favorites
-  /favs/album/{id}:
-    post:
-      description: Add album to the favorites
-      operationId: FavoritesController_addAlbum
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Added successfully
-        '400':
-          description: Bad. albumId is invalid (not uuid)
-        '422':
-          description: Album was not found.
-      summary: Add album to the favorites
-      tags: *ref_4
-    delete:
-      description: Delete album from favorites
-      operationId: FavoritesController_removeAlbum
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Deleted successfully
-        '400':
-          description: Bad. albumId is invalid (not uuid)
-        '404':
-          description: Album was not found.
-      summary: Delete album from favorites
-      tags: *ref_4
-  /favs/artist/{id}:
-    post:
-      description: Add artist to the favorites
-      operationId: FavoritesController_addArtist
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Added successfully
-        '400':
-          description: Bad. artistId is invalid (not uuid)
-        '422':
-          description: Artist was not found.
-      summary: Add artist to the favorites
-      tags: *ref_4
-    delete:
-      description: Delete artist from favorites
-      operationId: FavoritesController_removeArtist
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Deleted successfully
-        '400':
-          description: Bad. artistId is invalid (not uuid)
-        '404':
-          description: Artist was not found.
-      summary: Delete artist from favorites
-      tags: *ref_4
-  /favs/track/{id}:
-    post:
-      description: Add track to the favorites
-      operationId: FavoritesController_addTrack
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '201':
-          description: Added successfully
-        '400':
-          description: Bad. trackId is invalid (not uuid)
-        '422':
-          description: Track was not found.
-      summary: Add track to the favorites
-      tags: *ref_4
-    delete:
-      description: Delete track from favorites
-      operationId: FavoritesController_removeTrack
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        '204':
-          description: Deleted successfully
-        '400':
-          description: Bad. trackId is invalid (not uuid)
-        '404':
-          description: Track was not found.
-      summary: Delete track from favorites
-      tags: *ref_4
 info:
   title: REST Service
   description: >-
@@ -551,15 +381,6 @@ components:
         - name
         - year
         - artistId
-    UpdateAlbumDto:
-      type: object
-      properties:
-        name:
-          type: string
-        year:
-          type: number
-        artistId:
-          type: string
     CreateTrackDto:
       type: object
       properties:
@@ -576,14 +397,3 @@ components:
         - artistId
         - albumId
         - duration
-    UpdateTrackDto:
-      type: object
-      properties:
-        name:
-          type: string
-        artistId:
-          type: string
-        albumId:
-          type: string
-        duration:
-          type: number
