# src/tracks/tracks.controller.ts
@@ -7,12 +7,12 @@ import {
   Delete,
   ParseUUIDPipe,
   HttpStatus,
-  Put,
+  // Put,
   HttpCode,
 } from '@nestjs/common';
 import { TracksService } from './tracks.service';
 import { CreateTrackDto } from './dto/create-track.dto';
-import { UpdateTrackDto } from './dto/update-track.dto';
+// import { UpdateTrackDto } from './dto/update-track.dto';
 import { Track } from './interfaces/track.interface';
 import { ApiOperation, ApiParam, ApiResponse, ApiTags } from '@nestjs/swagger';
 
@@ -67,30 +67,30 @@ export class TracksController {
     return this.tracksService.findOne(id);
   }
 
-  @Put(':id')
-  @ApiOperation({
-    summary: 'Update track information',
-    description: 'Update library track information by UUID',
-  })
-  @ApiResponse({ status: 200, description: 'The track has been updated.' })
-  @ApiResponse({
-    status: 400,
-    description: 'Bad request. trackId is invalid (not uuid)',
-  })
-  @ApiResponse({
-    status: 404,
-    description: 'Track was not found.',
-  })
-  async update(
-    @Param(
-      'id',
-      new ParseUUIDPipe({ errorHttpStatusCode: HttpStatus.BAD_REQUEST }),
-    )
-    id: string,
-    @Body() updateTrackDto: UpdateTrackDto,
-  ): Promise<Track> {
-    return this.tracksService.update(id, updateTrackDto);
-  }
+  // @Put(':id')
+  // @ApiOperation({
+  //   summary: 'Update track information',
+  //   description: 'Update library track information by UUID',
+  // })
+  // @ApiResponse({ status: 200, description: 'The track has been updated.' })
+  // @ApiResponse({
+  //   status: 400,
+  //   description: 'Bad request. trackId is invalid (not uuid)',
+  // })
+  // @ApiResponse({
+  //   status: 404,
+  //   description: 'Track was not found.',
+  // })
+  // async update(
+  //   @Param(
+  //     'id',
+  //     new ParseUUIDPipe({ errorHttpStatusCode: HttpStatus.BAD_REQUEST }),
+  //   )
+  //   id: string,
+  //   @Body() updateTrackDto: UpdateTrackDto,
+  // ): Promise<Track> {
+  //   return this.tracksService.update(id, updateTrackDto);
+  // }
 
   @Delete(':id')
   @ApiOperation({
